--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,12 @@
     "qrcode": "^1.5.4"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.5",
+    "@types/express": "^4.17.24",
+    "@types/node": "^20.19.23",
     "@types/pg": "^8.15.5",
-    "@types/qrcode": "^1.5.5",
+    "@types/qrcode": "^1.5.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   }
